<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/productTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_type_hint"
        android:textSize="@dimen/eighteenSp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin10dp"
        android:layout_marginEnd="@dimen/margin5dp"
        app:layout_constraintTop_toBottomOf="@+id/productTypeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
        app:layout_constraintBottom_toTopOf="@+id/productQuantityTextView"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:id="@+id/btn1"
                android:text="@string/btn1"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn2"
                android:text="@string/btn2"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn3"
                android:text="@string/btn3"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:id="@+id/btn4"
                android:text="@string/btn4"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn5"
                android:text="@string/btn5"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn6"
                android:text="@string/btn6"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:id="@+id/btn7"
                android:text="@string/btn7"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn8"
                android:text="@string/btn8"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn9"
                android:text="@string/btn9"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:id="@+id/btnClear"
                android:text="@string/btnC"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn0"
                android:text="@string/btn0"
                android:layout_weight="1"
                />
            <Space
                android:layout_weight="1"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/managerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/productTotalTextView"
        />

    <TextView
        android:id="@+id/productTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_total_hint"
        android:textSize="@dimen/eighteenSp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/managerButton"
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fillDimen"
        android:text="@string/btnBuy"
        app:layout_constraintStart_toEndOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/productTotalTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        />

    <TextView
        android:id="@+id/productQuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity_hint"
        android:textSize="@dimen/eighteenSp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="@+id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fillDimen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productQuantityTextView"
        >
    </ListView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

</androidx.constraintlayout.widget.ConstraintLayout>